[package]
name = "balancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.9.0"
serde_json = "1.0.79"
serde_derive = "1.0.136"
actix-web = "4"
reqwest = "0.11.10"
awc = "3.0.0"
actix-rt = "2.7.0"
thiserror = "1.0.30"
log = "0.4.16"
dotenv = "0.15.0"
async-std = "1.11.0"
config = "0.13.1"
futures = "0.3.21"
